# ACS

./: .gitmodules  LICENSE.md  README.md
DAGA/: README.md
DAGA/dataset/: README.md
DAGA/implementations/: README.md
DAGA/implementations/BinaryLookup/: test.cpp
DAGA/implementations/Hashmap/: test.cpp
DAGA/implementations/Trie/: byod.py  run.sh  setup.sh
DAGA/implementations/Trie/c-code/: CMakeLists.txt  compile.sh
DAGA/implementations/Trie/c-code/arduino/: byod.ino  byod_extra.cpp  byod_extra.hh
DAGA/implementations/Trie/c-code/misc/: clock_arch_arm.h  clock_arch_x86.h  files.c  files.h  timings.c  timings.h
DAGA/implementations/Trie/c-code/src/: byod.c  byod.h  config.h  types.c  types.h
DAGA/implementations/Trie/c-code/src_cli/: main_embedded.c  main_files.c  sparse_speed.c  verify_files.c
DAGA/implementations/Trie/scripts/: create-sparse-batch.sh  sparse-to-c-batch.sh  timings-batch.sh
PTS/: README.md  requirements.txt  run_all.sh  tracker.py
